--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     container_name: jpa_mysql
     environment:
-      - MYSQL_ALLOW_EMPTY_PASSWORD="true"
+      MYSQL_ROOT_PASSWORD: root
     ports:
       - '13306:3306'
     expose:
